--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>BeMaker</title>
+  <meta content="https://instagram.fgel3-1.fna.fbcdn.net/v/t51.2885-19/s150x150/101049624_1341981049329300_8574763788257984512_n.jpg?tp=1&_nc_ht=instagram.fgel3-1.fna.fbcdn.net&_nc_ohc=7Qk9558FIYkAX-igD7k&edm=ABfd0MgBAAAA&ccb=7-4&oh=566d3b8e5d06828aab3fe98c98e93433&oe=60C2FBA8&_nc_sid=7bff83" itemprop="image">
   <base href="/">
   <link rel="icon" type="image/png" href="assets/img/favicon1.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
